# TAPIP3D

./: PACKAGE_SETUP.md  README.md  example_usage.py  install.sh  pyproject.toml  requirements.txt  setup.py
tapip3d/: __init__.py  inference.py  visualize.py
tapip3d/annotation/: base_annotator.py  depthcrafter.py  depthpro.py  megasam.py  unidepth.py  utils.py  video_depthanything.py
tapip3d/datasets/: base_dataset.py  data_ops.py  datatypes.py  eval_dataset.py  train_dataset.py
tapip3d/datasets/providers/: base_provider.py  custom_kubric_provider.py  dexycb_provider.py  dr_provider.py  iphone_provider.py  kubric_provider.py  lsfodyssey_provider.py  pod_provider.py  tapvid3d_provider.py  tapvid_provider.py
tapip3d/models/: point_tracker_3d.py
tapip3d/models/corr_features/: knn_feature_4d_optimized.py
tapip3d/utils/: common_utils.py  inference_utils.py  rerun_visualizer.py
