[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapip3d"
version = "0.1.0"
description = "TAPIP3D: 3D Point Tracking and Inference Package"
readme = "README.md"
authors = [
    {name = "TAPIP3D Team", email = "contact@tapip3d.github.io"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Computer Vision",
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "einops",
    "typed-argument-parser",
    "Pillow",
    "scipy",
    "matplotlib",
    "tqdm",
    "omegaconf",
    "hydra-core",
]

[project.urls]
Homepage = "https://tapip3d.github.io/"
Repository = "https://github.com/tapip3d/tapip3d"
Documentation = "https://tapip3d.github.io/"

[project.scripts]
tapip3d-inference = "tapip3d.inference:main"
tapip3d-visualize = "tapip3d.visualize:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tapip3d*"]

[tool.setuptools.package-data]
tapip3d = ["utils/viz.html"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true